# imdb-rename

./: .gitignore  Cargo.toml  rustfmt.toml
imdb-eval/: Cargo.toml
imdb-eval/src/: eval.rs  logger.rs  main.rs
imdb-index/: Cargo.toml
imdb-index/src/: error.rs  lib.rs  record.rs  scored.rs  search.rs  util.rs
imdb-index/src/index/: aka.rs  episode.rs  id.rs  mod.rs  names.rs  rating.rs  tests.rs  writer.rs
src/: download.rs  main.rs  rename.rs  util.rs
