[package]
name = "imdb-rename"
version = "0.1.6"
authors = ["Andrew Gallant <jamslam@gmail.com>", "pSox <psox[at]st8l.com>"]
description = """
A command line utility for searching IMDb and renaming your media files.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "movie", "index", "search", "name"]
license = "Unlicense/MIT"
edition = "2018"

[workspace]
members = ["imdb-eval", "imdb-index"]

[dependencies]
bstr = { version = "0.2.11", default-features = false, features = ["std"] }
clap = "2.33.0"
failure = "0.1.6"
flate2 = "1.0.13"
imdb-index = { version = "0.1.3", path = "imdb-index" }
lazy_static = "1.4.0"
log = { version = "0.4.8", features = ["std"] }
regex = "1.3.4"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
tabwriter = "1.2.1"
walkdir = "2.3.1"

[profile.release]
debug = true
