[package]
name = "imdb-index"
version = "0.1.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A library for indexing and searching IMDb using information retrieval.
"""
documentation = "https://github.com/BurntSushi/imdb-rename"
homepage = "https://github.com/BurntSushi/imdb-rename"
repository = "https://github.com/BurntSushi/imdb-rename"
readme = "README.md"
keywords = ["imdb", "movie", "index", "search"]
license = "Unlicense/MIT"
edition = "2018"

[dependencies]
byteorder = "1.3.4"
csv = "1.1.3"
failure = "0.1.6"
fnv = "1.0.6"
fst = "0.3.5"
lazy_static = "1.4.0"
log = { version = "0.4.8", features = ["std"] }
memmap = "0.7.0"
regex = "1.3.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
strsim = "0.10.0"

[dev-dependencies]
tempdir = "0.3.7"
